src/objects/E2_Capacity__c.object
<CustomObject>
    <description>Estimator 2.0</description>
    <fields>
        <fullName>Estimator__c</fullName>
        <description>The Estimate on which the capacity is created based on specified and derived efforts.</description>
        <inlineHelpText>The Estimate on which the capacity is created based on specified and derived efforts.</inlineHelpText>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipName>E2_Capacity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of hours assigned for a particular role on a particular phase.</description>
        <inlineHelpText>The number of hours assigned for a particular role on a particular phase.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <globalPicklist>E2_Phases</globalPicklist>
        <label>Phase</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>The Role on which the hours on a particular phase are assigned in the capacity.</description>
        <globalPicklist>E2_Role</globalPicklist>
        <inlineHelpText>The Role on which the hours on a particular phase are assigned in the capacity.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The skill needed in order to implement the scope.The skills/certifications object is used here .</description>
        <inlineHelpText>The skill needed in order to implement the scope.The skills/certifications object is used here .</inlineHelpText>
        <label>Speciality(Skills)</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipName>E2_Capacity</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Capacity Needs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Estimator__c</columns>
        <columns>Role__c</columns>
        <columns>Speciality__c</columns>
        <columns>Hours__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAP-{0000}</displayFormat>
        <label>E2Capacity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>